--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
-    "hubot-trivia-game": "^1.0.5"
+    "hubot-trivia-game": "jffjs/hubot-trivia-game"
   },
   "engines": {
     "node": "0.10.x"
