--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
+    "hubot-standup-alarm": "0.0.6",
     "hubot-trivia-game": "jffjs/hubot-trivia-game"
   },
   "engines": {
