--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vondroid",
+  "name": "Smarty",
   "version": "0.0.1",
   "private": true,
-  "author": "vondroid.chatbot@gmail.com",
+  "author": "smarty.vonage@gmail.com",
   "description": "A helpful robot for Vonage",
   "dependencies": {
     "cheerio": "^0.19.0",
