--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^0.19.0",
     "hubot": "^2.13.2",
     "hubot-business-cat": "^1.2.3",
+    "hubot-conversation": "^1.0.2",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.5",
     "hubot-google-translate": "^0.2.0",
@@ -20,7 +21,8 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "hubot-standup-alarm": "jffjs/hubot-standup-alarm",
-    "hubot-trivia-game": "jffjs/hubot-trivia-game"
+    "hubot-trivia-game": "jffjs/hubot-trivia-game",
+    "mongoose": "^4.3.0"
   },
   "engines": {
     "node": "0.10.x"
