--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "smarty.vonage@gmail.com",
   "description": "A helpful robot for Vonage",
   "dependencies": {
+    "amqplib": "^0.4.0",
     "cheerio": "^0.19.0",
     "hubot": "^2.13.2",
     "hubot-business-cat": "^1.2.3",
@@ -22,7 +23,9 @@
     "hubot-shipit": "^0.2.0",
     "hubot-standup-alarm": "jffjs/hubot-standup-alarm",
     "hubot-trivia-game": "jffjs/hubot-trivia-game",
-    "mongoose": "^4.3.0"
+    "mongoose": "^4.3.0",
+    "node-uuid": "^1.4.7",
+    "when": "^3.7.6"
   },
   "engines": {
     "node": "0.10.x"
