--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "node-uuid": "^1.4.7",
+    "stomp-client": "^0.8.1",
     "when": "^3.7.6"
   },
   "engines": {
