--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hubot-scripts": "^2.16.1",
     "hubot-shipit": "^0.2.0",
     "node-uuid": "^1.4.7",
+    "ramda": "^0.19.1",
     "stomp-client": "^0.8.1",
     "when": "^3.7.6"
   },
